[package]
name = "openrpsee"
version = "0.1.1"
edition = "2024"
description = "Library for building OpenRPC documents"
repository = "https://github.com/zcash/openrpsee"
license = "MIT OR Apache-2.0"

[dependencies]

documented = "0.9"
jsonrpsee = { version = "0.24", features = ["server"] }
quote = "1"
schemars = "1"
serde = "1"
serde_json = "1"
syn = { version = "2", features = ["full"] }
